--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
     box-sizing: border-box;
 }
 .header{ background-image: url("1.jpg");
-    background:blue;
+    background-color: rgb(36, 47, 58);
+    
     
 background-position: center; 
 background-size: cover;
