--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
 }
 .header{ background-image: url("1.jpg");
-    background-color: rgb(36, 47, 58);
+    background-color: blue ;
     
     
 background-position: center; 
