--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@
     box-sizing: border-box;
 }
 .header{background-image: url("1.webp");
+    
 background-position: center;
-background-color: rgb(13, 13, 153);
+background-color:  blue;
 background-size: cover;
 background-repeat: no-repeat;
 padding: 15px;
@@ -25,7 +26,7 @@ padding: 15px;
     padding-top: 100px;
 }
 h1,p{
-    color: white;
+    color: aqua;
 }
 
 .logo{
